--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,6 @@
 [build]
 builder = "nixpacks"
+buildCommand = "pip install -r requirements.txt && python -m spacy download en_core_web_sm"
 
 [deploy]
-startCommand = "cd backend && python -m spacy download en_core_web_sm && gunicorn app:app --bind 0.0.0.0:$PORT"
+startCommand = "cd backend && gunicorn app:app --bind 0.0.0.0:$PORT"
