Fix Railway deployment config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-scikit-learn
-numpy
-pdfplumber
-python-docx
-Flask
-werkzeug
-spacy
-reportlab
-gunicorn
+scikit-learn>=1.0.0
+numpy>=1.21.0
+pdfplumber>=0.9.0
+python-docx>=0.8.11
+Flask>=2.0.0
+werkzeug>=2.0.0
+spacy>=3.0.0
+reportlab>=3.6.0
+gunicorn>=20.1.0
+
