--- a/railway.toml
+++ b/railway.toml
@@ -3,4 +3,8 @@ builder = "nixpacks"
 buildCommand = "pip install -r requirements.txt && python -m spacy download en_core_web_sm"
 
 [deploy]
-startCommand = "cd backend && gunicorn app:app --bind 0.0.0.0:$PORT"
+startCommand = "cd backend && gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120"
+healthcheckPath = "/"
+healthcheckTimeout = 300
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
