--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "nixpacks"
-buildCommand = "pip install -r requirements.txt && python -m spacy download en_core_web_sm"
+buildCommand = "pip install -r requirements.txt && python -m spacy download en_core_web_md"
 
 [deploy]
 startCommand = "cd backend && gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120"
